--- a/SqlLib/build.gradle
+++ b/SqlLib/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.github.dcendents.android-maven'
+group='com.github.FantasticAndroid'
 
 android {
     compileSdkVersion rootProject.ext.COMPILE_SDK
