--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,6 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.code.gson:gson:2.8.6'
-    implementation project(':SqlLib')
+    implementation 'com.github.FantasticAndroid:SqliteORM:1.0'
+    ////implementation project(':SqlLib')
 }
